cpu fix